[package]
name = "libfonthelper"
version = "0.2.6"
authors = ["Chugunov Roman <Zebs-BMK@yandex.ru>"]
edition = "2018"
license = "GPL-2.0-only"

description = "Reads fonts in passed directories and return objects of fonts for Figma Font Helper"
homepage = "https://github.com/ChugunovRoman/libfonthelper"
repository = "https://github.com/ChugunovRoman/libfonthelper"
documentation = "https://docs.rs/libfonthelper/"

keywords = ["System", "Fonts", "Figma"]
categories = ["filesystem"]

[dependencies]
finder = "0.1.6"
regex = "1.3.9"
freetype-rs = "0.26.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
pretty_env_logger = "0.4"
log = "0.4.11"
