[package]
name = "libfonthelper"
version = "0.3.5"
authors = ["Chugunov Roman <Zebs-BMK@yandex.ru>"]
license = "GPL-2.0-only"

description = "Reads fonts in passed directories and return objects of fonts for Figma Font Helper"
homepage = "https://github.com/ChugunovRoman/libfonthelper"
repository = "https://github.com/ChugunovRoman/libfonthelper"
documentation = "https://docs.rs/libfonthelper/"

keywords = ["System", "Fonts", "Figma"]
categories = ["filesystem"]

[dependencies]
finder = "0.1.6"
regex = "1.3.9"
font-reader = "0.1.6"
